snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__pdt__pdtcompose.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/pdt/pdtcompose.cc",
    ),
    start_line: 1,
    end_line: 84,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 8,
            exit_sum: 8,
            total_space_functions: 0,
            exit_min: 8,
            exit_max: 8,
        },
        cognitive: Stats {
            structural: 9,
            structural_sum: 9,
            structural_min: 9,
            structural_max: 9,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 13.0,
            cyclomatic: 13.0,
            n: 1,
            cyclomatic_max: 13.0,
            cyclomatic_min: 13.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 199,
            u_operands: 68,
            operands: 149,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 84,
                unit: true,
                sloc_min: 84,
                sloc_max: 84,
            },
            ploc: Ploc {
                lines: {
                    61,
                    55,
                    49,
                    43,
                    31,
                    25,
                    19,
                    80,
                    74,
                    7,
                    62,
                    56,
                    50,
                    38,
                    26,
                    20,
                    14,
                    8,
                    69,
                    57,
                    51,
                    45,
                    39,
                    33,
                    27,
                    21,
                    82,
                    15,
                    76,
                    9,
                    70,
                    64,
                    52,
                    46,
                    40,
                    34,
                    28,
                    22,
                    83,
                    16,
                    71,
                    65,
                    59,
                    47,
                    41,
                    35,
                    29,
                    23,
                    78,
                    11,
                    72,
                    5,
                    60,
                    54,
                    42,
                    36,
                    30,
                    18,
                    12,
                    73,
                    67,
                },
                ploc_min: 61,
                ploc_max: 61,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 41,
                lloc_min: 41,
                lloc_max: 41,
            },
            space_count: 1,
            blank_min: 19,
            blank_max: 19,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 348.0,
            halstead_vocabulary: 92.0,
            halstead_volume: 2270.1995607078406,
            cyclomatic: 13.0,
            sloc: 84.0,
            comments_percentage: 0.047619047619047616,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
