snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__extensions__pdt__pdtinfo.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/extensions/pdt/pdtinfo.cc",
    ),
    start_line: 1,
    end_line: 54,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 5,
            exit_sum: 5,
            total_space_functions: 0,
            exit_min: 5,
            exit_max: 5,
        },
        cognitive: Stats {
            structural: 5,
            structural_sum: 5,
            structural_min: 5,
            structural_max: 5,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 7.0,
            cyclomatic: 7.0,
            n: 1,
            cyclomatic_max: 7.0,
            cyclomatic_min: 7.0,
        },
        halstead: Stats {
            u_operators: 22,
            operators: 105,
            u_operands: 40,
            operands: 70,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 54,
                unit: true,
                sloc_min: 54,
                sloc_max: 54,
            },
            ploc: Ploc {
                lines: {
                    52,
                    43,
                    40,
                    37,
                    34,
                    31,
                    25,
                    22,
                    16,
                    13,
                    10,
                    53,
                    50,
                    47,
                    44,
                    32,
                    29,
                    26,
                    23,
                    20,
                    8,
                    48,
                    45,
                    42,
                    39,
                    36,
                    33,
                    30,
                    27,
                    21,
                    18,
                    15,
                    12,
                    9,
                    6,
                },
                ploc_min: 35,
                ploc_max: 35,
            },
            cloc: Cloc {
                only_comment_lines: 5,
                code_comment_lines: 0,
                comment_line_end: Some(
                    4,
                ),
                cloc_min: 5,
                cloc_max: 5,
            },
            lloc: Lloc {
                logical_lines: 22,
                lloc_min: 22,
                lloc_max: 22,
            },
            space_count: 1,
            blank_min: 14,
            blank_max: 14,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 175.0,
            halstead_vocabulary: 62.0,
            halstead_volume: 1041.984354317703,
            cyclomatic: 7.0,
            sloc: 54.0,
            comments_percentage: 0.09259259259259259,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
